--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,88 @@
 ---
-import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../config';
+import HeaderLink from "./HeaderLink.astro";
 ---
 
-<header>
-	<h2>
-		{SITE_TITLE}
-	</h2>
-	<nav>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
-	</nav>
+<header id="menu-container">
+  <nav>
+    <a href="/">
+      <div class="img-container">
+        <img src="nh.svg" width="64px" height="64px" />
+      </div>
+    </a>
+    <ul class="nav-container">
+      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/about">About Me</HeaderLink>
+      <HeaderLink href="/resume">Resume</HeaderLink>
+      <HeaderLink href="/projects">Projects</HeaderLink>
+      <HeaderLink
+        href="https://github.com/neeia/"
+        target="_blank"
+        rel="noopener noreferrer">GitHub</HeaderLink
+      >
+    </ul>
+  </nav>
 </header>
 <style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
-		margin: 0.5em 0;
-	}
+  header {
+    min-height: 100lvh;
+    background-color: #222428;
+    width: 185px;
+  }
+  @media (max-width: 1200px) {
+    header {
+      position: fixed;
+      transform: translate(-100vw, 0);
+      height: 100vh;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      color: white;
+      gap: 1px;
+      z-index: 1000;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      width: 185px;
+      transition: transform 0.3s ease-in-out;
+    }
+    header[data-open="true"] {
+      box-shadow: 0px 0px 40px -24px #000;
+      transform: translate(0, 0);
+    }
+  }
+  nav {
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 2ch;
+    box-sizing: border-box;
+    width: 185px;
+  }
+  h2 {
+    margin: 0.5em 0;
+  }
+  ul {
+    padding-left: 2ch;
+  }
+  ul.nav-container {
+    padding-top: 20vh;
+  }
+  div.img-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  @media (max-width: 1200px) {
+    div {
+      font-size: 12px;
+    }
+  }
+  img {
+    width: 6em;
+    height: 6em;
+  }
 </style>
