--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,64 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import HeaderLink from "../components/HeaderLink.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <main>
+      <div class="title">
+        <img src="nh.svg" width="160px" height="160px" />
+        <hr class="vertical" />
+        <h1>NEIA HU</h1>
+      </div>
+      <h2>Front-End Developer.</h2>
+      <HeaderLink href="/about">About Me</HeaderLink>
+      <HeaderLink href="/resume">Resume</HeaderLink>
+      <HeaderLink href="/projects">Projects</HeaderLink>
+      <HeaderLink
+        href="https://github.com/neeia/"
+        target="_blank"
+        rel="noopener noreferrer">GitHub</HeaderLink
+      >
+    </main>
+    <style>
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 25vh;
+      }
+      h1 {
+        font-size: 5rem;
+        overflow-wrap: break-word;
+        width: 2ch;
+        text-align: justify;
+        margin: 0;
+        line-height: 0.695;
+        color: crimson;
+        font-family: monospace;
+      }
+      hr.vertical {
+        border: none;
+        background-color: crimson;
+        width: 4px;
+        margin: 0;
+        height: 10.25rem;
+      }
+      div.title {
+        display: flex;
+        gap: 4px;
+      }
+      h2 {
+        margin: 0;
+        line-height: 2;
+      }
+    </style>
+  </body>
 </html>
