--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
     <div class="backdrop" onclick="closeMenu()"></div>
     <Header />
     <main>
-      <div class="title-container">
+      <header class="title-container">
         <button class="menu-button" onclick="openMenu()">
           <Icon name="ic:round-menu" width="32px" height="32px" />
           <script type="text/javascript">
@@ -74,9 +74,9 @@ const { title } = Astro.props;
             opacity: 0.3;
             pointer-events: auto;
           }
-          div.title-container {
+          header.title-container {
             display: flex;
-            margin-top: 4px;
+            margin-top: 2em;
             margin-bottom: 4px;
           }
           h1 {
@@ -84,7 +84,7 @@ const { title } = Astro.props;
             margin-top: 0;
           }
         </style>
-      </div>
+      </header>
       <slot />
     </main>
     <style is:global>
@@ -93,10 +93,10 @@ const { title } = Astro.props;
       }
       @media print {
         header {
-          display: none;
+          display: none !important;
         }
         footer {
-          display: none;
+          display: none !important;
         }
       }
       a {
