Fix line height of title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
         width: 2ch;
         text-align: justify;
         margin: 0;
-        line-height: 0.695;
+        line-height: 54px;
         color: crimson;
         font-family: monospace;
       }
