Fix relative image paths

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import HeaderLink from "./HeaderLink.astro";
   <nav>
     <a href="/">
       <div class="img-container">
-        <img src="nh.svg" width="64px" height="64px" />
+        <img src="/nh.svg" width="64px" height="64px" />
       </div>
     </a>
     <ul class="nav-container">
