--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
   <body>
     <main>
       <div class="title">
-        <img src="nh.svg" width="160px" height="160px" />
+        <img src="/nh.svg" width="160px" height="160px" />
         <hr class="vertical" />
         <h1>NEIA HU</h1>
       </div>
