Add links to relevant favorites

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,11 +9,11 @@ import Layout from "../components/Layout.astro";
       The NEIA-model developer is a neural network model that started out really
       stupid and trained over decades to be less stupid. This model includes
       highly developed natural language processing skills, being able to
-      converse with her peers, passing the Turing test. In
-      2018, she was sent to Northeastern University to further train on advanced
-      data as part of a collaboration. At the end of 2021, her official training
-      had come to an end, and she was sent into production. However, the secret
-      of this computational model is as such: it never stops learning.
+      converse with her peers, passing the Turing test. In 2018, she was sent to
+      Northeastern University to further train on advanced data as part of a
+      collaboration. At the end of 2021, her official training had come to an
+      end, and she was sent into production. However, the secret of this
+      computational model is as such: it never stops learning.
     </p>
     <p>
       This model is also known to have multiple configurations, able to reach
@@ -30,11 +30,35 @@ import Layout from "../components/Layout.astro";
       <di>Pronouns</di>
       <dd>She/Her</dd>
       <di>🤍 Song</di>
-      <dd>【Ado】ギラギラ</dd>
+      <dd>
+        <a
+          href="https://www.youtube.com/watch?v=sOiMD45QGLs"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          【Ado】ギラギラ
+        </a>
+      </dd>
       <di>🤍 Game</di>
-      <dd>Celeste</dd>
+      <dd>
+        <a
+          href="https://www.celestegame.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Celeste
+        </a>
+      </dd>
       <di>🤍 Eatery</di>
-      <dd>Futago Udon</dd>
+      <dd>
+        <a
+          href="https://www.instagram.com/futago_udon/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Futago Udon
+        </a>
+      </dd>
     </dl>
     <h2 class="quote">ok bye</h2>
   </div>
