--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -51,6 +51,7 @@ const { title } = Astro.props;
             border: none;
             background: none;
             margin-right: 1ch;
+            color: crimson;
           }
           @media screen and (min-width: 1201px) {
             button {
