Add marker removal redundancies for safari

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -32,5 +32,7 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, "");
   }
   li.inactive::marker {
     content: "";
+    color: transparent;
+    display: none;
   }
 </style>
