Rearrange about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,30 +6,26 @@ import Layout from "../components/Layout.astro";
   <div class="container">
     <h2 class="quote">Everything's fine, and it just keeps getting better.</h2>
     <p>
-      The NEIA-model developer is a neural network model that started out really
-      stupid and trained over decades to be less stupid. This model includes
-      highly developed natural language processing skills, being able to
-      converse with her peers, passing the Turing test. In 2018, she was sent to
-      Northeastern University to further train on advanced data as part of a
+      The NEIA-model (/ˌneɪ.ə/) developer is a neural network model that started
+      out really stupid and trained over decades to be less stupid. This model
+      includes highly developed natural language processing skills, being able
+      to converse with her peers, passing the Turing test. In 2018, she was sent
+      to Northeastern University to further train on advanced data as part of a
       collaboration. At the end of 2021, her official training had come to an
-      end, and she was sent into production. However, the secret of this
-      computational model is as such: it never stops learning.
+      end, and she was sent into production. However, the true power of this
+      computational model is that it never stops learning.
     </p>
     <p>
       This model is also known to have multiple configurations, able to reach
       high ranks while training on various video games. Its construct's powerful
       advanced sensory functions allow it to cook and bake competently, and its
-      processing power combined with its sound receptors give it a fine
+      processing power combined with its next-gen sound receptors give it a fine
       appreciation for music.
     </p>
 
-    <h2>Configuration</h2>
+    <h2>Favorites</h2>
     <dl>
-      <di>Pronounce</di>
-      <dd>IPA: neɪ-ʌ</dd>
-      <di>Pronouns</di>
-      <dd>She/Her</dd>
-      <di>🤍 Song</di>
+      <di>Song</di>
       <dd>
         <a
           href="https://www.youtube.com/watch?v=sOiMD45QGLs"
@@ -39,7 +35,17 @@ import Layout from "../components/Layout.astro";
           【Ado】ギラギラ
         </a>
       </dd>
-      <di>🤍 Game</di>
+      <di>Color</di>
+      <dd><span class="fav-color"></span> FF88DD</dd>
+      <style>
+        .fav-color {
+          display: inline-block;
+          background-color: #ff88dd;
+          width: 0.75em;
+          height: 0.75em;
+        }
+      </style>
+      <di>Game</di>
       <dd>
         <a
           href="https://www.celestegame.com/"
@@ -49,7 +55,13 @@ import Layout from "../components/Layout.astro";
           Celeste
         </a>
       </dd>
-      <di>🤍 Eatery</di>
+      <di>Anime</di>
+      <dd>Kaguya-sama: Love Is War</dd>
+      <di>Movie</di>
+      <dd>A Silent Voice</dd>
+      <di>Book</di>
+      <dd>Catch-22</dd>
+      <di>Eatery</di>
       <dd>
         <a
           href="https://www.instagram.com/futago_udon/"
@@ -59,6 +71,8 @@ import Layout from "../components/Layout.astro";
           Futago Udon
         </a>
       </dd>
+      <di>Dessert</di>
+      <dd>Frozen Yogurt</dd>
     </dl>
     <h2 class="quote">ok bye</h2>
   </div>
@@ -91,13 +105,13 @@ import Layout from "../components/Layout.astro";
   }
   dl {
     display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 2px 8px;
+    grid-template-columns: repeat(auto-fill, 96px 240px);
+    max-width: 70ch;
+    gap: 2px 12px;
     align-items: center;
   }
   di {
     padding: 6px 12px;
-    text-align: end;
     width: 100%;
     color: white;
     background-color: crimson;
