Fix project url

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -92,7 +92,7 @@ import Layout from "../components/Layout.astro";
       name="ME"
       src="this.png"
       alt="Wow, how recursive!"
-      href="https://buckit.app/"
+      href="https://neia.dev/"
       gh="buckit"
       accent="crimson"
     >
