Fix relative image path for projects

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -15,7 +15,7 @@ const ghBase = "https://github.com/neeia/";
 ---
 
 <li class="card">
-  <img src={`img/projects/${src}`} width="420px" height="255px" alt={alt} title={alt} />
+  <img src={`/img/projects/${src}`} width="420px" height="255px" alt={alt} title={alt} />
   <div class="title-container">
     <h3>{name}</h3>
     <div class="ext">
