Buckit in progress

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -75,9 +75,9 @@ import Layout from "../components/Layout.astro";
       Generates semi-random words from the lyrics of songs in a Spotify playlist.
     </ProjectCard>
     <ProjectCard
-      name="Buckit"
+      name="Buckit [WIP]"
       src="buckit.webp"
-      alt=""
+      alt="No image preview."
       href="https://buckit.app/"
       gh="buckit"
       accent="#17d171"
