Fix about IPA pronunciation

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from "../components/Layout.astro";
   <div class="container">
     <h2 class="quote">Everything's fine, and it just keeps getting better.</h2>
     <p>
-      The NEIA-model (/ˌneɪ.ə/) developer is a neural network model that started
+      The NEIA-model (/ˈneɪ.ə/) developer is a neural network model that started
       out really stupid and trained over decades to be less stupid. This model
       includes highly developed natural language processing skills, being able
       to converse with her peers, passing the Turing test. In 2018, she was sent
