Replace book with fruit

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -59,8 +59,6 @@ import Layout from "../components/Layout.astro";
       <dd>Kaguya-sama: Love Is War</dd>
       <di>Movie</di>
       <dd>A Silent Voice</dd>
-      <di>Book</di>
-      <dd>Catch-22</dd>
       <di>Eatery</di>
       <dd>
         <a
@@ -71,6 +69,8 @@ import Layout from "../components/Layout.astro";
           Futago Udon
         </a>
       </dd>
+      <di>Fruit</di>
+      <dd>Watermelon</dd>
       <di>Dessert</di>
       <dd>Frozen Yogurt</dd>
     </dl>
