--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -46,7 +46,6 @@ import Layout from "../components/Layout.astro";
       accent="#ffd440"
     >
       <ul class="tech-stack" slot="tech">
-        <li><Icon name="simple-icons:typescript" title="Typescript" /></li>
         <li><Icon name="simple-icons:nextdotjs" title="Next.js" /></li>
         <li><Icon name="simple-icons:firebase" title="Firebase" /></li>
         <li><Icon name="simple-icons:mui" title="MUI" /></li>
@@ -62,7 +61,6 @@ import Layout from "../components/Layout.astro";
       accent="#bb98e5"
     >
       <ul class="tech-stack" slot="tech">
-        <li><Icon name="simple-icons:typescript" title="Typescript" /></li>
         <li><Icon name="simple-icons:nextdotjs" title="Next.js" /></li>
         <li><Icon name="simple-icons:firebase" title="Firebase" /></li>
         <li>
@@ -72,21 +70,21 @@ import Layout from "../components/Layout.astro";
           />
         </li>
       </ul>
-      Generates semi-random words from the lyrics of songs in a Spotify playlist.
+      Game host that produces semi-random words from the lyrics of songs in a Spotify playlist.
     </ProjectCard>
     <ProjectCard
-      name="Buckit [WIP]"
-      src="buckit.webp"
-      alt="No image preview."
+      name="Buckit"
+      src="buckit.svg"
+      alt="The app interface"
       href="https://buckit.app/"
       gh="buckit"
       accent="#17d171"
     >
       <ul class="tech-stack" slot="tech">
         <li><Icon name="simple-icons:svelte" title="Svelte" /></li>
-        <li><Icon name="simple-icons:firebase" title="Firebase" /></li>
+        <li><Icon name="simple-icons:mongodb" title="Firebase" /></li>
       </ul>
-      Lifetime to-do list that splits goals into buckets for various lengths of time.
+      Lifetime to-do list that divides personal tasks and goals into buckets.
     </ProjectCard>
     <ProjectCard
       name="ME"
@@ -99,7 +97,7 @@ import Layout from "../components/Layout.astro";
       <ul class="tech-stack" slot="tech">
         <li><Icon name="simple-icons:astro" title="Astro" /></li>
       </ul>
-      Makes you really, really want to reach out to schedule an interview with me.
+      Personal website. You will reach out to schedule an interview with me. Or else.
     </ProjectCard>
   </ul>
 </Layout>
