--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -248,16 +248,16 @@ import Work from "../components/Resume/Work.astro";
               location="Milpitas, CA"
             >
               <li>
-                Develop VB.NET web solutions for internal clients, incl. data
+                Developed VB.NET web solutions for internal clients, incl. data
                 logging forms
               </li>
               <li>
-                Discuss project details, incl. specifications and timelines for
-                deliverables
+                Discussed project details, incl. specifications and timelines
+                for deliverables
               </li>
               <li>
-                Deploy to company intranet on IIS, writing data to Microsoft SQL
-                server
+                Deployed to company intranet on IIS, writing data to Microsoft
+                SQL server
               </li>
             </Work>
             <Work
@@ -369,7 +369,7 @@ import Work from "../components/Resume/Work.astro";
                 Designed a fully responsive UI using <b>Vanilla Extract</b>
               </li>
               <li>
-                Creating a custom autocomplete component for filling in song
+                Created a custom autocomplete component for filling in song
                 names
               </li>
             </Project>
@@ -383,15 +383,17 @@ import Work from "../components/Resume/Work.astro";
               date="December 2022 - Present"
             >
               <li>
-                Developing a lifetime to-do list that divides tasks into buckets
-                using <b>Svelte</b>, allowing users to split and sort goals over
-                varying periods of time
+                Built a lifetime to-do list that divides tasks into buckets
+                using <b>Svelte</b>, allowing users to split and sort goals
+                between multiple categories
               </li>
               <li>
-                Creating a custom drag and drop UI to move tasks between buckets
+                Created a custom accessible drag and drop UI to move tasks and
+                buckets
               </li>
               <li>
-                Using <b>Google Firebase</b> for authentication and storage
+                Used <b>MongoDB Atlas</b> and <b>Vercel</b> for authentication, storage,
+                and hosting
               </li>
             </Project>
           </ul>
