Fix mongodb project tooltip

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -82,7 +82,7 @@ import Layout from "../components/Layout.astro";
     >
       <ul class="tech-stack" slot="tech">
         <li><Icon name="simple-icons:svelte" title="Svelte" /></li>
-        <li><Icon name="simple-icons:mongodb" title="Firebase" /></li>
+        <li><Icon name="simple-icons:mongodb" title="MongoDB" /></li>
       </ul>
       Lifetime to-do list that divides personal tasks and goals into buckets.
     </ProjectCard>
