Update project img descriptions

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -75,7 +75,7 @@ import Layout from "../components/Layout.astro";
     <ProjectCard
       name="Buckit"
       src="buckit.svg"
-      alt="The app interface"
+      alt="Buckit app logo."
       href="https://buckit.app/"
       gh="buckit"
       accent="#17d171"
@@ -89,7 +89,7 @@ import Layout from "../components/Layout.astro";
     <ProjectCard
       name="ME"
       src="this.png"
-      alt="Wow, how recursive!"
+      alt="Wow, how meta!"
       href="https://neia.dev/"
       gh="me"
       accent="crimson"
