Fix location of job

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -278,7 +278,7 @@ import Work from "../components/Resume/Work.astro";
                 Delivered contextually written feedback to coworkers and parents
               </li>
             </Work>
-            <Work date="Jun - Aug 2021" location="Remote">
+            <Work date="Jun - Aug 2021" location="Arcadia & Irvine, CA">
               <li>
                 Taught groups of K-8 students app development with the Thunkable
                 web app
