Add mongo to skills

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -162,6 +162,7 @@ import Work from "../components/Resume/Work.astro";
             <li>Yarn</li>
             <li>NPM</li>
             <li>Google Firebase</li>
+            <li>MongoDB</li>
             <li>Vercel</li>
             <li>Cloudflare Pages</li>
           </ul>
