Ad golf skins to projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -73,6 +73,19 @@ import Layout from "../components/Layout.astro";
       Game host that produces semi-random words from the lyrics of songs in a Spotify playlist.
     </ProjectCard>
     <ProjectCard
+      name="HUSKINS"
+      src="skins.webp"
+      alt="A golf scorecard."
+      href="https://www.huskinsgolf.com/"
+      gh="golf-skins"
+      accent="#005c36"
+    >
+      <ul class="tech-stack" slot="tech">
+        <li><Icon name="simple-icons:astro" title="Astro" /></li>
+      </ul>
+      SPA to manage a "skins" game of golf. Weekend project I built for my golf-loving dad.
+    </ProjectCard>
+    <ProjectCard
       name="Buckit"
       src="buckit.svg"
       alt="Buckit app logo."
