Update about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,29 +4,24 @@ import Layout from "../components/Layout.astro";
 
 <Layout title="About Me">
   <div class="container">
-    <h2 class="quote">Everything's fine, and it just keeps getting better.</h2>
-    <p>
-      The NEIA-model (/ˈneɪ.ə/) developer is a neural network model that started
-      out really stupid and trained over decades to be less stupid. This model
-      includes highly developed natural language processing skills, being able
-      to converse with her peers, passing the Turing test. In 2018, she was sent
-      to Northeastern University to further train on advanced data as part of a
-      collaboration. At the end of 2021, her official training had come to an
-      end, and she was sent into production. However, the true power of this
-      computational model is that it never stops learning.
-    </p>
-    <p>
-      This model is also known to have multiple configurations, able to reach
-      high ranks while training on various video games. Its construct's powerful
-      advanced sensory functions allow it to cook and bake competently, and its
-      processing power combined with its next-gen sound receptors give it a fine
-      appreciation for music.
-    </p>
+    <h2>I am...</h2>
+    <ul>
+      <li>a web developer.</li>
+      <li>accessibility obsessed.</li>
+      <li>a gamer.</li>
+      <li>an artist.</li>
+      <li>a sister.</li>
+      <li>an ABC.</li>
+      <li>a consumer.</li>
+      <li>a friend.</li>
+      <li>"funny".</li>
+      <li>an extrovert.</li>
+      <li>your future coworker.</li>
+    </ul>
 
-    <h2>Favorites</h2>
-    <dl>
-      <di>Song</di>
-      <dd>
+    <h2>I love...</h2>
+    <ul>
+      <li>
         <a
           href="https://www.youtube.com/watch?v=sOiMD45QGLs"
           target="_blank"
@@ -34,33 +29,17 @@ import Layout from "../components/Layout.astro";
         >
           【Ado】ギラギラ
         </a>
-      </dd>
-      <di>Color</di>
-      <dd><span class="fav-color"></span> FF88DD</dd>
-      <style>
-        .fav-color {
-          display: inline-block;
-          background-color: #ff88dd;
-          width: 0.75em;
-          height: 0.75em;
-        }
-      </style>
-      <di>Game</di>
-      <dd>
+      </li>
+      <li>
         <a
-          href="https://www.celestegame.com/"
+          href="https://www.ikea.com/us/en/p/blahaj-soft-toy-shark-90373590/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          Celeste
+          BLÅHAJ
         </a>
-      </dd>
-      <di>Anime</di>
-      <dd>Kaguya-sama: Love Is War</dd>
-      <di>Movie</di>
-      <dd>A Silent Voice</dd>
-      <di>Eatery</di>
-      <dd>
+      </li>
+      <li>
         <a
           href="https://www.instagram.com/futago_udon/"
           target="_blank"
@@ -68,12 +47,109 @@ import Layout from "../components/Layout.astro";
         >
           Futago Udon
         </a>
-      </dd>
-      <di>Fruit</di>
-      <dd>Watermelon</dd>
-      <di>Dessert</di>
-      <dd>Frozen Yogurt</dd>
-    </dl>
+      </li>
+      <li>Krispy Kreme</li>
+      <li>watermelon</li>
+      <li>Yummy Dino Buddies</li>
+      <li>people who offer interviews</li>
+    </ul>
+
+    <h2>I like...</h2>
+    <ul>
+      <li>
+        <a
+          href="https://hempuli.com/baba//"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Baba is You
+        </a>
+      </li>
+      <li>Calvin and Hobbes</li>
+      <li>
+        <a
+          href="https://www.celestegame.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Celeste
+        </a>
+      </li>
+      <li>Chicken McGriddles</li>
+      <li>Cinnamon Toast Crunch</li>
+      <li>Domino's Lava Cakes</li>
+      <li>Flamin' Hot Ruffles</li>
+      <li>
+        <a
+          href="https://www.leagueoflegends.com/en-us/event/gwen-abilities-rundown/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Gwen
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.youtube.com/watch?v=qQrgto184Tk"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Imagine Dragons - Shots
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.youtube.com/@jarvis"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Jarvis Johnson
+        </a>
+        <li>Raising Cane's</li>
+        <li>ReactJS</li>
+        <li>Salted Caramel Ice Cream</li>
+      </li>
+      <li>
+        <a
+          href="https://www.songbrd.app/"
+          target="_blank"
+          rel="noopener"
+        >
+        Songbrd
+        </a>
+      </li>
+      <li><span class="fav-color"></span> #FF88DD</li>
+      <style>
+        .fav-color {
+          display: inline-block;
+          background-color: #ff88dd;
+          width: 0.75em;
+          height: 0.75em;
+          border: 1px dotted black;
+        }
+      </style>
+    </ul>
+
+    <h2>Lukewarm Takes</h2>
+    <ul class="line">
+      <li>Popeyes has the best fast food chicken sandwich</li>
+      <li>Cane's has the best tenders, bar none, and it isn't close</li>
+      <li>Chick-fil-A is only good for waffle fries and cobb salads</li>
+      <li>In n Out fries are terrible, even animal-style or well-done</li>
+      <li>Peanut butter sandwiches are better with honey than with jelly</li>
+      <li>The 🅱️ emoji is still hilarious</li>
+    </ul>
+
+    <h2>Fun Facts</h2>
+    <ul class="line">
+      <li>I've memorized the entire lyrics to over sixteen hours of songs</li>
+      <li>I have pretty low spice tolerance but I pretend it's high</li>
+      <li>Statistically speaking, I'm very likely to be awake right now</li>
+      <li>When choosing between two shows, I usually watch the worse one</li>
+      <li>I need glasses but don't have them because I can't choose a style</li>
+      <li>I'm no designer, and I dislike some of my work, but I'm trying my best</li>
+      <li>I usually sleep on my back and without a pillow under my head</li>
+    </ul>
   </div>
 </Layout>
 
@@ -88,23 +164,13 @@ import Layout from "../components/Layout.astro";
       padding-top: 0;
     }
   }
-  h2.quote {
-    font-size: 1em;
-    font-weight: 100;
-    font-style: italic;
-  }
   h2 {
     margin: 0;
     font-size: 1.5em;
   }
-  p {
-    max-width: 70ch;
-    text-align: justify;
-    text-indent: 2ch;
-  }
-  dl {
+  ul {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 96px 240px);
+    grid-template-columns: 1fr 1fr;
     max-width: 70ch;
     gap: 2px 12px;
     align-items: center;
@@ -116,7 +182,15 @@ import Layout from "../components/Layout.astro";
     background-color: crimson;
     box-sizing: border-box;
   }
-  dd {
+  li {
     margin: 0;
+  }
+  ul.line {
+    grid-template-columns: 1fr;
+  }
+  @media screen and (max-width: 600px) {
+    ul {
+      grid-template-columns: 1fr;
+    }
   }
 </style>
