--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -52,6 +52,7 @@ const { title } = Astro.props;
             background: none;
             margin-right: 1ch;
             color: crimson;
+            cursor: pointer;
           }
           @media screen and (min-width: 1201px) {
             button {
