Remove noreferrer from self links

--- a/src/components/Resume/Project.astro
+++ b/src/components/Resume/Project.astro
@@ -17,7 +17,7 @@ const { name, url, repo, date } = Astro.props;
   <div>
     <h3>{name}</h3>
     <span>
-      <a href={url.href} target="_blank" rel="noopener noreferrer">
+      <a href={url.href} target="_blank" rel="noopener">
         {url.name}
       </a>
     </span>
