--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,14 +9,12 @@ import Layout from "../components/Layout.astro";
       <li>a web developer.</li>
       <li>accessibility obsessed.</li>
       <li>a gamer.</li>
-      <li>an artist.</li>
-      <li>a sister.</li>
-      <li>an ABC.</li>
-      <li>a consumer.</li>
-      <li>a friend.</li>
-      <li>"funny".</li>
       <li>an extrovert.</li>
-      <li>your future coworker.</li>
+      <li>a sister.</li>
+      <li>a baritone.</li>
+      <li>a consumer.</li>
+      <li>"funny".</li>
+      <li>your future coworker?</li>
     </ul>
 
     <h2>I love...</h2>
@@ -54,82 +52,6 @@ import Layout from "../components/Layout.astro";
       <li>people who offer interviews</li>
     </ul>
 
-    <h2>I like...</h2>
-    <ul>
-      <li>
-        <a
-          href="https://hempuli.com/baba//"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Baba is You
-        </a>
-      </li>
-      <li>Calvin and Hobbes</li>
-      <li>
-        <a
-          href="https://www.celestegame.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Celeste
-        </a>
-      </li>
-      <li>Chicken McGriddles</li>
-      <li>Cinnamon Toast Crunch</li>
-      <li>Domino's Lava Cakes</li>
-      <li>Flamin' Hot Ruffles</li>
-      <li>
-        <a
-          href="https://www.leagueoflegends.com/en-us/event/gwen-abilities-rundown/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Gwen
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.youtube.com/watch?v=qQrgto184Tk"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Imagine Dragons - Shots
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.youtube.com/@jarvis"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Jarvis Johnson
-        </a>
-        <li>Raising Cane's</li>
-        <li>ReactJS</li>
-        <li>Salted Caramel Ice Cream</li>
-      </li>
-      <li>
-        <a
-          href="https://www.songbrd.app/"
-          target="_blank"
-          rel="noopener"
-        >
-        Songbrd
-        </a>
-      </li>
-      <li><span class="fav-color"></span> #FF88DD</li>
-      <style>
-        .fav-color {
-          display: inline-block;
-          background-color: #ff88dd;
-          width: 0.75em;
-          height: 0.75em;
-          border: 1px dotted black;
-        }
-      </style>
-    </ul>
-
     <h2>Lukewarm Takes</h2>
     <ul class="line">
       <li>Popeyes has the best fast food chicken sandwich</li>
@@ -137,18 +59,16 @@ import Layout from "../components/Layout.astro";
       <li>Chick-fil-A is only good for waffle fries and cobb salads</li>
       <li>In n Out fries are terrible, even animal-style or well-done</li>
       <li>Peanut butter sandwiches are better with honey than with jelly</li>
-      <li>The 🅱️ emoji is still hilarious</li>
+      <li>Taco Bell might not be authentic, but it's got something special</li>
     </ul>
 
     <h2>Fun Facts</h2>
     <ul class="line">
       <li>I've memorized the entire lyrics to over sixteen hours of songs</li>
-      <li>I have pretty low spice tolerance but I pretend it's high</li>
-      <li>Statistically speaking, I'm very likely to be awake right now</li>
       <li>When choosing between two shows, I usually watch the worse one</li>
       <li>I need glasses but don't have them because I can't choose a style</li>
-      <li>I'm no designer, and I dislike some of my work, but I'm trying my best</li>
       <li>I usually sleep on my back and without a pillow under my head</li>
+      <li>I like milk tea, but rarely go because I don't think it's worth it</li>
     </ul>
   </div>
 </Layout>
